userContent.css
body {
background-color: rgb(17, 17, 17) !important; /* background color */
background: rgb(17, 17, 17) !important; /* background color */
background-image: linear-gradient(rgb(34, 34, 34),rgb(17, 17, 17)) !important; /* background gradient, its used on some websites */
color: rgb(221, 221, 221) !important; /* text color */
opacity: 90% !important; /* make everything on the page 90% brightness */
}

p {
color: rgb(221, 221, 221) !important; /* text color */
}

span {
background-color: rgba(200, 200, 200, 0.1) !important; /* shows the invisible spans of content that are related to each-other */
}

b, em, i, u, em, small {
color: rgba(255, 171, 171, 1) !important; /* color for bold text and glyphs */
}

h1, h2 {
color: rgba(133, 227, 255, 1) !important; /* color for two biggest header sizes */
}

ul, ol, li, del, dt, dd, optgroup, dl {
color: rgba(246, 166, 255, 1) !important; /* color for all list types + */
}

table, td, th, tr, col, caption, thead, tbody, tfoot, colgroup, dialog {
background-color: rgb(34, 34, 34) !important; /* background color for all tables + */
color: rgb(221, 221, 221) !important; /* color for all tables + */
}

img {
filter: brightness(80%) !important; /* make all images have 75% brightness */
background: rgba(17, 17, 17, 0.1)!important; /* background color of loading images (not all websites/images use this) */
background-color: rgba(17, 17, 17, 0.1) !important; /* background color of loading images (not all websites/images use this) */
transition: ease 0.5s !important;
}

img:hover {
transition: ease 0.5s !important;
filter: brightness(100%) !important;
}

code, blockquote, q, nav, sup, sub, strong, mark, marker {
background-color: rgb(51, 51, 51) !important; /* background color for code snippets and quotes + */
color: rgba(255, 217, 0, 1) !important; /* color for code snippets and quotes + */
}

label, form, select, dialog {
background-color: rgb(51, 51, 51) !important; /* background color for forms and input areas + */
color: rgb(221, 221, 221) !important; /* text color for forms and input areas + */
border-color: rgb(187, 187, 187) !important; /* border color */
border-width: 1px !important; /* add 1 pixel width border */
}

textarea, input {
filter: invert(75%) hue-rotate(180deg) !important; /* invert some forms and text areas that don't properly take background color */
border-color: rgb(68, 68, 68) !important; /* border color */
border-width: 1px !important; /* add 1 pixel width border */
}

button, .btn {
background-color: rgb(68, 68, 68) !important; /* background color for buttons */
border-color: rgb(151, 162, 255) !important; /* border color for buttons */
color: rgb(255, 217, 0) !important; /* color for text on buttons */
}

a:link {
color: rgb(238, 238, 238) !important; /* color for unvisited links */
border-bottom: rgb(255, 217, 0) 1px solid !important; /* add underline to all clickable links */
}

a:visited {
color: rgb(144, 238, 144) !important; /* color for visited links */
}

a:hover {
color: rgb(255, 166, 0) !important; /* color for links that mouse hovers over them */
}

/* a:focus {
color: rgb(255, 255, 0) !important;
} */

a:active {
color: rgb(255, 255, 0) !important; /* color for links that you clicked but haven't let go of the left mouse button */
}

/* below lines are for styling about pages in firefox */
@-moz-document url-prefix("about:") {
*:not(.checkbox-check, input[type=checkbox]) {
background-color: rgba(17, 17, 17, 0.1) !important;
background: rgba(17, 17, 17, 0.1) !important;
background-image: linear-gradient(rgba(34, 34, 34, 0.1),rgba(17, 17, 17, 0.1)) !important;
color: rgb(221, 221, 221) !important;}
}

